--- a/RahmatApp/app/src/main/AndroidManifest.xml
+++ b/RahmatApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -10,29 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication" >
+        android:theme="@style/Theme.RahmatApp">
         <activity
-            android:name=".Login"
-            android:exported="false" />
-        <!-- Splash activity becomes the launcher -->
-        <activity
-            android:name=".Splash"
+            android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.MyApplication" >
+            android:label="@string/app_name"
+            android:theme="@style/Theme.RahmatApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Other activities -->
-        <activity
-            android:name=".RegistrationActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication" />
+        </activity>
     </application>
 
 </manifest>
